# opal-fetcher-mongodb

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
mongodb/: mongo-init.js
src/opal_fetcher_mongodb/: provider.py
